<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity = "bottom"
    tools:context=".MainActivity"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout1"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_chat"
            android:transcriptMode="alwaysScroll"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/txt_chat_entry"
            android:paddingBottom="5dp" />

        <Button
            android:id="@+id/btn_chat_emojiKeyboard"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:background="@drawable/emoji_button_layout_inactive"
            android:paddingLeft="11dp"
            android:drawableStart="@drawable/ic_sentiment_emoji_face"
            android:textColor="@android:color/background_light"
            android:layout_alignParentBottom="true"
            />


        <Button
            android:id="@+id/btn_chat_send"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_layout"
            android:paddingLeft="11dp"
            android:drawableStart="@drawable/ic_input_extract_action_send"
            android:textColor="@android:color/background_light"
            android:layout_alignParentBottom="true"
            />

        <Button
            android:id="@+id/btn_chat_editSend"
            style="@style/Widget.AppCompat.ImageButton"
            android:visibility="invisible"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:background="@drawable/edit_button_layout"
            android:paddingLeft="11dp"
            android:drawableStart="@drawable/ic_check_white_24dp"
            android:textColor="@android:color/background_light"
            android:layout_alignParentBottom="true"
            />

        <Button
            android:id="@+id/btn_chat_editAbort"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toStartOf="@+id/btn_chat_editSend"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:background="@drawable/abort_edit"
            android:drawableStart="@drawable/ic_close_white_24dp"
            android:paddingLeft="11dp"
            android:layout_above="@id/btn_chat_editSend"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/background_light"
            android:visibility="invisible"
            android:minHeight="48dp"
            />

        <com.vanniktech.emoji.EmojiEditText
            android:id="@+id/txt_chat_entry"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="7dp"
            android:layout_toStartOf="@+id/btn_chat_send"
            android:layout_toEndOf="@+id/btn_chat_emojiKeyboard"
            android:background="@drawable/edit_text_round_corners"
            android:hint="@string/hint_text"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            >
        </com.vanniktech.emoji.EmojiEditText>

        <TextView
            android:id="@+id/txt_chat_receivedMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</RelativeLayout>