<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/txt_message_messageBody"
        android:text=""
        android:background="@drawable/sent_message_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_message_messageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_message_messageBody"
        app:layout_constraintTop_toBottomOf="@+id/txt_message_messageBody" />

    <TextView
        android:id="@+id/txt_message_messageEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_message_messageBody"
        app:layout_constraintTop_toBottomOf="@+id/txt_message_messageTime" />

</android.support.constraint.ConstraintLayout>