<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_set_nickname"
        android:title="@string/menu_set_nickname" />
    <item
        android:id="@+id/menu_about_page"
        android:title="@string/menu_about_page" />
</menu>